# rustclaw

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  FEATURES-DATETIME-LOCATION.md  IMPROVEMENT_PLAN.md  LEMBRETES-IMPLEMENTACAO.md  LICENSE  NEW_FEATURES_PLAN.md  README-RPI.md  README.md  SYSTEMD-GUIDE.md  TODO.md  TODO_PLAN.md  build-rpi.sh  index.html  rustclaw.service  setup-systemd.sh  setup_permissions.sh  style.css
checkpoint_01_trust_model/phase_1_audit/: audit_tool_trust_checks.md
checkpoint_01_trust_model/phase_2_trust_checker/: README.md
checkpoint_01_trust_model/phase_3_wire_trust/: README.md
checkpoint_01_trust_model/phase_4_cli_commands/: README.md
checkpoint_01_trust_model/phase_5_verification/: README.md
checkpoint_02_embeddings/phase_1_tfidf_fallback/: README.md
checkpoint_02_embeddings/phase_2_config_options/: README.md
checkpoint_02_embeddings/phase_3_bm25_ranking/: README.md
checkpoint_02_embeddings/phase_4_quality_metrics/: README.md
checkpoint_02_embeddings/phase_5_verification/: README.md
checkpoint_03_context_compaction/phase_1_token_counting/: README.md
checkpoint_03_context_compaction/phase_2_summarizer/: README.md
checkpoint_03_context_compaction/phase_3_react_integration/: README.md
checkpoint_03_context_compaction/phase_4_cli_commands/: README.md
checkpoint_03_context_compaction/phase_5_verification/: README.md
checkpoint_04_cost_tracking/phase_1_cost_tracker/: README.md
checkpoint_04_cost_tracking/phase_2_llm_integration/: README.md
checkpoint_04_cost_tracking/phase_3_rate_limiter/: README.md
clear memory/: plain.md
config/: .env.example
data/: memory_cli.db-shm
docs/: ARCHITECTURE.md  SKILLS_SYSTEM.md  SKILL_IMPORT.md  SKILL_MANAGEMENT.md  architecture-diagram.md  complete-system-guide.md  rfc-sessions-memory.md
execute o plano de desenvolvimento/: plain.md
skills/brainstorming/: skill.md
src/: ab_testing.rs  agent.rs  app_state.rs  app_store.rs  auth.rs  bridge.rs  cli.rs  config.rs  context_compactor.rs  error.rs  features.rs  lazy_loader.rs  main.rs  prefetch.rs  reminder_executor.rs  time_travel.rs  wither.rs  workspace_trust.rs
(+119 files in other folders)
